--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,26 +13,26 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-294
+dock_hsplit_3=-472
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Backgrounds/ocean_parallax.jpg")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Backgrounds/", "res://Backgrounds/Animated/", "res://Backgrounds/Animated/Plant/")
+dock_filesystem_selected_paths=PackedStringArray("res://audio/loop-bubble_movement.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Backgrounds/Animated/", "res://Backgrounds/Animated/Plant/", "res://audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://World.tscn")
-current_scene="res://World.tscn"
-center_split_offset=-511
+open_scenes=PackedStringArray("res://World.tscn", "res://menu.tscn", "res://options_menu.tscn", "res://volume_slider.tscn")
+current_scene="res://options_menu.tscn"
+center_split_offset=-425
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=2
 
 [ScriptEditor]
 
